--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "vuepress build blog"
   },
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.5.2",
     "@vuepress/theme-blog": "^2.2.0",
     "vuepress": "^1.5.2",
     "vuepress-plugin-feed": "^0.1.8"
